mType/tests/testFiles/error/error/undefinedVariableReassignment.mt
// Test compile-time detection of assignment to undeclared variable
// This should fail at compile-time, not runtime
x = 10;
